# PictureManager

./: .gitignore  .gitlab-ci.yml  Notes  pyproject.toml
Old_to_delete/: SessionManager.py
photo-organizer/: README.md
photo-organizer/src/: blur_detector.py  duplicate_finder.py  logger.py  main.py  options.py  organizer.py
photo-organizer/src/gui/: app.py
photo-organizer/src/utils/: file_utils.py
src/: HelperFunctions.py  OSFunctions.py  PictureManagerSession.py  PictureProcessor.py  PracticeDump.py  ProcessPictures.py  ProofOfConcept.py  SessionManager.py  main.py
src/cli/: commands.py  parser.py
src/core/: PictureProcessor.py
src/picture_manager/: __main__.py
src/picture_manager/cli/: commands.py  parser.py
src/picture_manager/core/: PictureProcessor.py
test/integration/: integration-tests.txt
test/units/: testPictureProcessor.py  testSetup.py
tests/units/: testPictureProcessor.py
